[project]
name = "prompts-hub"
version = "0.1.0"
description = "A web-based prompt portal for managing, versioning, and organizing AI prompts"
authors = [{name = "Kanishk", email = "kanishk@example.com"}]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "nicegui>=1.4.0",
    "sqlmodel>=0.0.14",
    "uvicorn>=0.24.0",
    "asgiref>=3.7.0",
    "asgi-wsgi>=0.1.0",
]

[tool.uv]
dev-dependencies = []
